[package]
name = "cryptographic-message-syntax"
version = "0.21.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
rust-version = "1.65"
license = "MPL-2.0"
description = "A pure Rust implementation of Crypographic Message Syntax (RFC 5652)"
keywords = ["cms", "rfc5652", "apple", "codesign"]
homepage = "https://github.com/indygreg/cryptography-rs"
repository = "https://github.com/indygreg/cryptography-rs.git"
readme = "README.md"

[dependencies]
bcder = "0.7.1"
bytes = "1.4.0"
chrono = "0.4.24"
hex = "0.4.3"
pem = "1.1.1"
reqwest = { version = "0.11.14", default-features = false, features = ["blocking", "rustls-tls"] }
ring = "0.16.20"
signature = { version = "2.0.0", features = ["std"] }

[dependencies.x509-certificate]
path = "../x509-certificate"
version = "0.18.0"
features = ["test"]
