[package]
name = "cryptographic-message-syntax"
version = "0.26.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
rust-version = "1.65"
license = "MPL-2.0"
description = "A pure Rust implementation of Crypographic Message Syntax (RFC 5652)"
keywords = ["cms", "rfc5652", "apple", "codesign"]
homepage = "https://github.com/indygreg/cryptography-rs"
repository = "https://github.com/indygreg/cryptography-rs.git"
readme = "README.md"

[dependencies]
bcder = "0.7.4"
bytes = "1.8.0"
chrono = { version = "0.4.38", default-features = false }
hex = "0.4.3"
pem = "3.0.4"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "rustls-tls"] }
ring = "0.17.8"
signature = { version = "2.2.0", features = ["std"] }

[dependencies.x509-certificate]
path = "../x509-certificate"
version = "0.23.0"
features = ["test"]
