[package]
name = "cryptographic-message-syntax"
version = "0.28.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
description = "A pure Rust implementation of Crypographic Message Syntax (RFC 5652)"
keywords = ["cms", "rfc5652", "apple", "codesign"]
homepage = "https://github.com/indygreg/cryptography-rs"
repository = "https://github.com/indygreg/cryptography-rs.git"
readme = "README.md"

[dependencies]
bcder = "0.7.6"
bytes = "1.10.1"
chrono = { version = "0.4.42", default-features = false }
hex = "0.4.3"
pem = "3.0.6"
reqwest = { version = "0.12.25", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
ring = "0.17.14"
signature = { version = "2.2.0", features = ["std"] }

[dependencies.x509-certificate]
path = "../x509-certificate"
version = "0.25.0"
features = ["test"]

[features]
default = ["http"]
http = ["dep:reqwest"]
