[package]
name = "pgp-cleartext"
version = "0.10.0"
edition = "2021"
rust-version = "1.75"
authors = ["Gregory Szorc <gregory.szorc@gmail.com"]
license = "MPL-2.0"
description = "PGP cleartext framework implementation"
keywords = ["pgp", "cryptography"]
homepage = "https://github.com/indygreg/cryptography-rs"
repository = "https://github.com/indygreg/cryptography-rs.git"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.38", default-features = false }
digest = "0.10.7"
md-5 = "0.10.6"
pgp = "0.14.0"
sha-1 = "0.10.1"
sha2 = "0.10.8"
